# Openbrowser

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  test.sh
.aider/skills/: openbrowser
.beads/: metadata.json
.github/workflows/: ci.yml
.omp/agent/skills/: openbrowser
.omp/agent/skills/openbrowser/: SKILL.md
.omp/agent/skills/openbrowser/references/: programmatic-usage.md  registry.json
adapters/node/pardus-playwright/: package.json
adapters/node/pardus-playwright/src/: index.ts
adapters/node/pardus-puppeteer/: package.json
adapters/node/pardus-puppeteer/src/: index.ts
adapters/python/pardus-playwright/: pyproject.toml
adapters/python/pardus-playwright/pardus_playwright/: __init__.py  async_api.py  pardus_ext.py  sync_api.py
adapters/python/pardus-playwright/tests/: __init__.py
adapters/tests/: test_cdp_compat.py
ai-agent/pardus-browser/src/: index.ts
ai-agent/pardus-browser/src/core/: BrowserInstance.ts  CookieStore.ts
ai-agent/pardus-browser/src/llm/: prompts.ts
crates/pardus-cdp/: Cargo.toml
crates/pardus-cdp/src/: lib.rs  provider.rs  server.rs
crates/pardus-cdp/src/domain/: console.rs  css.rs  dom.rs  emulation.rs  input.rs  mod.rs  network.rs  oauth.rs  page.rs  pardus_ext.rs  performance.rs  runtime.rs  target.rs
crates/pardus-cdp/src/transport/: ws.rs
crates/pardus-cdp/tests/: domain_context_test.rs  domain_context_unit_test.rs  pardus_interact_test.rs
crates/pardus-cli/: Cargo.toml
crates/pardus-cli/src/: config.rs  main.rs
crates/pardus-cli/src/commands/: clean.rs  interact.rs  map.rs  mod.rs  navigate.rs  repl.rs  screenshot.rs  serve.rs  tab.rs
crates/pardus-core/: Cargo.toml
crates/pardus-core/src/: app.rs  browser.rs  config.rs  lib.rs  page.rs  session.rs
crates/pardus-core/src/browser/: mod.rs
crates/pardus-core/src/cache/: disk_cache.rs  http_cache_policy.rs  resource_cache.rs
crates/pardus-core/src/csp/: directive.rs
crates/pardus-core/src/http/: client.rs
crates/pardus-core/src/interact/: actions.rs  auto_fill.rs  element.rs  form.rs  js_interact.rs  mod.rs  recording.rs  wait.rs
crates/pardus-core/src/intercept/: builtins.rs  mod.rs  rules.rs  send.rs
crates/pardus-core/src/js/: bootstrap.js  bootstrap_readonly.js  dom.rs  extension.rs  fetch.rs  mod.rs  ops.rs  runtime.rs  snapshot.rs
crates/pardus-core/src/navigation/: graph.rs
crates/pardus-core/src/oauth/: mod.rs
crates/pardus-core/src/output/: json_formatter.rs  llm_formatter.rs  md_formatter.rs  mod.rs  stats.rs  tree_formatter.rs
crates/pardus-core/src/parser/: preload_scanner.rs  streaming.rs
crates/pardus-core/src/prefetch/: mod.rs  prefetcher.rs
crates/pardus-core/src/push/: h2_push.rs
crates/pardus-core/src/resource/: fetcher.rs  mod.rs  pool.rs  priority.rs  scheduler.rs
crates/pardus-core/src/semantic/: mod.rs  tree.rs
crates/pardus-core/src/sse/: client.rs  parser.rs
crates/pardus-core/src/tab/: manager.rs  mod.rs  tab.rs
crates/pardus-core/src/tls/: mod.rs  pinning.rs
crates/pardus-core/src/websocket/: mod.rs
crates/pardus-core/tests/: config_test.rs  csp_test.rs  dedup_extended_test.rs  element_id_test.rs  feed_test.rs  semantic_extract_test.rs  shadow_root_test.rs  websocket_test.rs
crates/pardus-debug/: Cargo.toml
crates/pardus-debug/src/: fetch.rs  lib.rs  record.rs
crates/pardus-kg/: Cargo.toml
crates/pardus-kg/src/: config.rs  crawler.rs  discovery.rs  fingerprint.rs  graph.rs  state.rs
crates/pardus-server/src/: state.rs
crates/pardus-tauri/frontend/: package-lock.json
crates/pardus-tauri/frontend/src/: App.tsx  index.css
crates/pardus-tauri/frontend/src/components/: InstanceHeader.tsx  InteractionBar.tsx  TreeViewer.tsx
crates/pardus-tauri/frontend/src/context/: AgentContext.tsx
crates/pardus-tauri/frontend/src/utils/: classifyEvent.ts
crates/pardus-tauri/src-tauri/src/: agent_bridge.rs  browser_window.rs  cdp_bridge.rs  challenge.rs  commands.rs  lib.rs
skills/openbrowser/: SKILL.md
skills/openbrowser/references/: cli-reference.md  examples.md  installation.md  knowledge-graph.md  programmatic-usage.md  repl-and-cdp.md  semantic-roles.md  testing-patterns.md  troubleshooting.md
tests/: run_tests.sh
web/src/: App.tsx
web/src/components/: CookieInspector.tsx  NetworkLog.tsx  TreeViewer.tsx
web/src/hooks/: useEvents.ts
