[workspace]
members = [
    "crates/pardus-core",
    "crates/pardus-cdp",
    "crates/pardus-cli",
    "crates/pardus-debug",
    "crates/pardus-kg",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
url = "2"
deno_core = "0.396"
futures-util = "0.3"
blake3 = "1"
lol_html = "2"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "json"] }
parking_lot = "0.12"
base64 = "0.22"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
h2 = "0.4"
bytes = "1"

[patch.crates-io]
temporal_rs = { path = "patches/temporal" }
timezone_provider = { path = "patches/temporal/provider" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
