[package]
name = "pardus-cdp"
version.workspace = true
edition.workspace = true

[dependencies]
pardus-core = { path = "../pardus-core" }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
