[package]
name = "pardus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pardus-browser"
path = "src/main.rs"

[dependencies]
pardus-core = { path = "../pardus-core" }
pardus-debug = { path = "../pardus-debug" }
pardus-cdp = { path = "../pardus-cdp" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
dirs = "6"
