[package]
name = "pardus-kg"
version.workspace = true
edition.workspace = true

[dependencies]
pardus-core = { path = "../pardus-core" }
pardus-debug = { path = "../pardus-debug" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.22"
